# nothingburger

./: .gitignore  README.md  pyproject.toml
examples/: chat.py  modelfile_writer.py  roborambo.py  talking_heads.py
examples/config/model_library/example/: neural-chat.toml
examples/config/model_library/ollama/: llama2.toml  mistral7b.toml  neural-chat.toml  nous-hermes.toml  vicuna.toml
examples/config/model_library/openai/: gpt3-5.toml
src/nothingburger/: chains.py  cli.py  config_tui.py  config_validator.py  instructions.py  memory.py  model_loader.py  parsers.py  templates.py  tools.py  types.py
tests/: woodchuck.py
