[project]
name = "nothingburger"
version = "0.0.01"
authors = [
    { name = "Keyton Stanier" },
]
description = "Minimalistic man-made burgers of data and words for interfacing with LLMs and beyond"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["nothing", "burger", "llm", "chain", "text-generation"]
license = { text = "idfk yet" }
dependencies = [
    'python-dotenv',
    'Jinja2',
    'llama-cpp-python',
    'ctransformers',
    'openai',
    'transformers',
    'ollama',
    'zulip',
    'mattermostdriver',
    'mautrix',
    'selenium',
    'pandoc',
    'chromadb',
    'psycopg2-binary',
    'tomli-w',  # For TOML writing in config TUI
]

[project.optional-dependencies]
tui = ['rich']  # Enhanced TUI experience

[project.scripts]
nothingburger = "nothingburger.cli:main"
burger = "nothingburger.cli:main"  # Shorter alias
burger-config = "nothingburger.config_tui:main"  # Direct access to config TUI