[project]
name = "nothingburger"
version = "0.0.2"
authors = [
    { name = "Keyton Stanier" },
]
description = "Minimalistic framework for interfacing with LLMs"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["llm", "chain", "text-generation", "minimalist", "openai", "ollama"]
license = { text = "MIT" }
dependencies = [
    'Jinja2',           # Template engine
    'python-dotenv',    # Environment variables
]

[project.optional-dependencies]
# Model providers (install only what you need)
openai = ['openai']
ollama = ['ollama'] 
llamacpp = ['llama-cpp-python']
transformers = ['transformers']
ctransformers = ['ctransformers']

# All model providers
models = [
    'openai', 
    'ollama', 
    'llama-cpp-python', 
    'transformers', 
    'ctransformers'
]

[project.scripts]
nothingburger = "nothingburger.cli:main"
burger = "nothingburger.cli:main"
burger-config = "nothingburger.config_tui:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"